 + Schemes are now stored in separate files under Schemes
 * Fix broken preview of team hats (e.g. cap_team)

Content:
 + New flag: uk_scotland
 + New voice: Default_pl (Polish)

Styles and game modes:
 + Construction Mode: Add a few shortcuts
 + Construction Mode: Remember all selections
 + Construction Mode: Add subtle glow to healing station
 + Construction Mode: Change message colors

A Space Adventure:
 + Precise Shooting: Display collected ammo
 + Hard Flying: Display personal best at mission start
 + Killing the Specialists: Add event messages and graphical effects
 * Killing the Specialists: Fix very misleading hints in mission panel

A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 * Fix incorrect storytelling in mission descriptions

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New call: WriteLnToChat(string): Add a line in the chat
 + New call: SetVampiric(bool): Toggle vampirism
 + New call: SetLaserSight(bool): Toggle laser sight
 + New call: GetWind(): Returns current wind (approximation) from -100 to 100
 + New call: GetTeamName(teamIdx): Returns name of team with given index (starts at 0)
 + New call: SpawnSupplyCrate(x, y, content, [, amount]): Spawn ammo or utility crate, depending on content
 + New call: HealHog(gearUid, healthBoost[, showMessage[, tint]]): Heal hedgehog with graphical effects and message
 + New callback: onEndTurn(): Called at the end of a turn (when gears have settled)
 * AddAmmo now automatically unselects weapon if it would remove current ammo from current hedgehog
 * Fix call: SetWeapon(amNothing) now unselects weapon
 * Fix global: TotalRounds was stuck at -1 for several turns

====================== 0.9.23 ======================
HIGHLIGHTS:
 + Battalion style
 + Fort mode is now a map type instead of a scheme setting
 + Fort mode now works with more than 2 teams
 + New weapon: rubber duck